# nbp_currency_browser

./: .gitignore  docker-compose.yaml  readme.md
backend/: .coveragerc  .gitignore  Dockerfile  conftest.py  entrypoint.sh  pyproject.toml
backend/config/: celery.py  settings.py  tasks.py  urls.py
backend/currencies/: forms.py  models.py  urls.py  views.py
backend/currencies/management/commands/: fetch_nbp_data.py
backend/currencies/migrations/: 0001_initial.py  0002_currency_data_since_2005_1_2.py
backend/currencies/templates/currencies/: currency_form.html
backend/currencies/tests/: test_commands.py  test_forms.py  test_models.py  test_views.py
backend/helpers/: create_objects_in_db.py  nbp_api_request.py
backend/helpers/tests/: test_create_objects_in_db.py  test_request_functions.py
backend/users/migrations/: 0001_initial.py
envs/: backend.default.env
