[tool.poetry]
name = "nbp currency browser"
version = "0.1.0"
description = "Service for browsing currencies rates across years."
authors = ["Martyna Witkowska <mar.witkowska@gmail.com>"]
license = "Beerware"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
